static/css/top.css
html, body {
    background: linear-gradient(to bottom, #7244ad, #1d1d1d, 90%);
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


#cardColumn {
    background: linear-gradient(to bottom, #6932b0, #1d1d1d, 10%);
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); /* Responsive columns */
    gap: 20px; /* Spacing between cards */
    justify-items: center;
    align-items: start;
    padding: 50px 10px;
    margin: 0 auto;
    width: 100%;
    box-sizing: border-box;
}


.card {
    background: none;
    border: 1px solid white;
    border-radius: 10px;
    padding: 10px;
    width: 33%;
    min-width: 400px;
    height: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    justify-items: center;
    box-sizing: border-box;
    overflow: hidden;
}       


.card img {
    width: 100px;
    height: 100px;
    margin-left: 10px;
    margin-right: 10px;
    cursor: pointer;
    display: block;
    border-radius: 4px;
    border: none;
}

/* Text and links inside the card */


.card h2 {
    font-size: 1.5em;
}

.card h3 {
    margin-left: 10px;
    margin-right: 10px;
    font-size: 1.2em;
}

.card p {
    margin-left: 10px;
    color: #b0b0b0;
    font-size: 1em;
}

.card a {
    margin-left: 10px;
    color: white;
    text-decoration: none;
}

.card a:hover {
    color: white;
}

#timeRangeSelect {
    background-color: #200000;
    color: white;
    min-width: 160px;
    padding: 10px;
    border: 1px solid #1DB954;
    border-radius: 4px;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
    font-size: 1em;
    cursor: pointer;
    transition: background-color 0.3s, border-color 0.3s;
}

#timeRangeSelect option {
    background-color: #0f3e20;
    color: white;
}



#timeRangeSelect:hover {
    background-color: #1DB954;
    border-color: #14833b;
}

/* Spotify button */
.spotifyButton {
    background: black;
    background-image: url('/spotify_logo');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    padding: 0;
    border: none;
    margin: 0;
    width: 70px;
    height: 25px;
}

